<resources>
    <string name="app_name">Gallery_App</string>
    <string name="onboard_title">Create Your design</string>
    <string name="home_title">Discover</string>
    <string name="title_nav">For you</string>
    <string name="desc_nav">Showing 889 photos “for you”</string>
    <string name="scroll_view_desc">list image special</string>
    <string name="list_image">grid product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library_header">My photos</string>
    <string name="album_btn_text">Album</string>
</resources>